@@ -1,3 +1,8 @@
+2001-12-24  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* ftpclass.cc: reset real_cwd when someone does quote CWD and the like;
+	  scan PWD reply for rightmost quote (suggested by Glenn Maynard).
+
 2001-12-24  Glenn Maynard <g_ld@zewt.org>
 
 	* StatusLine.h: make GetWidthDelayed const.
